20260108 ./var/www/cjdns/hia/api/README.txt added.
20260108 ./var/www/cjdns/hia/api/api-update.sh added.
20260108 ./var/www/cjdns/hia/api/api-dump.sh added.
20260108 ./var/www/cjdns/hia/watchlist/clean.sh added.
20260108 ./var/www/cjdns/hia/watchlist/l.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-iplist.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-cifs.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-dns.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-ftp.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-http.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-http-ipfs.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-http-ak.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-http-titles.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-http-referer.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-stats.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-nfs.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-nodeinfo.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-proxy.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-ssh.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-ssl.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-ver.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-http-git.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-http-cjdradio.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-nntp.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-scan-tcp.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-scan-udp.sh added.
20260108 ./var/www/cjdns/hia/watchlist/pubk.sh added.
20260108 ./var/www/cjdns/hia/watchlist/walk/l.sh added.
20260108 ./var/www/cjdns/hia/watchlist/walk/top.sh added.
20260108 ./var/www/cjdns/hia/watchlist/walk/walk.sh added.
20260108 ./var/www/cjdns/hia/watchlist/walk/ver-d.sh added.